SUBDIRS = \
	atrac3 \
	audio \
	base \
	ctrl \
	debug \
	display \
	dmac \
	fpu \
	ge \
	gim \
	gmo \
	gu \
	gum \
	gim \
	gmo \
	hprm \
	kernel \
	libadler \
	libbase64 \
	libccc \
	libcglue \
	libdeflt \
	libfont \
	libfpu \
	libhttp \
	libmd5 \
	libmpeg \
	libmt19937 \
	libpsmf \
	libpthreadglue \
	libqpcode \
	libsas \
	libsha0 \
	libsha1 \
	libsha224 \
	libsha256 \
	libsha384 \
	libsha512 \
	libsndp \
	libvfpu \
	libwave \
	libssl \
	jpeg \
	modinfo \
	mp3 \
	nand \
	net \
	openpsid \
	power \
	prof \
	registry \
	rtc \
	sircs \
	sdk \
	startup \
	umd \
	usb \
	user \
	vaudio \
	utility \
	vfpu \
	video \
	vsh \
	wlan \
	samples
